feat: Integración de inscripcion_evolucion_estado
